# crosscompute-validation

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  setup.cfg
sources/crosscompute_configuration/: errors.py
sources/crosscompute_configuration/functions/: configuration.py
sources/crosscompute_configuration/macros/: log.py
sources/crosscompute_definitions/: constant.py
sources/crosscompute_definitions/asset/: configuration.yaml
sources/crosscompute_definitions/function/: variable.py
sources/crosscompute_validation/: __init__.py  constant.py  constants.py  errors.py  settings.py
sources/crosscompute_validation/asset/: configuration.done  configuration.todo  configuration.yaml
sources/crosscompute_validation/assets/: configuration.done  configuration.todo  configuration.yaml
sources/crosscompute_validation/function/: configuration.py  variable.py
sources/crosscompute_validation/functions/: configuration.py  disk.py  variable.py
sources/crosscompute_validation/macros/: disk.py  iterable.py  log.py  text.py
sources/crosscompute_validation/scripts/: examine.py
tests/: configuration_test.py  functions_variable_test.py  test_configuration.py
