[metadata]
name = crosscompute-validation
version = 1.0.0
description = Configuration Validation for CrossCompute Tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://crosscompute.com
author = CrossCompute Inc.
author_email = support@crosscompute.com
license = MIT
license_file = LICENSE.md
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    # Framework :: CrossCompute
    # Intended Audience :: Analysts
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Application Frameworks
project_urls =
    Bug Tracker = https://github.com/crosscompute/crosscompute-validation/issues
    Documentation = https://docs.crosscompute.com
    Source Code = https://github.com/crosscompute/crosscompute-validation

[options]
packages = find:
python_requires = >=3.10
install_requires =
zip_safe = True

[options.packages.find]
where = sources

[options.package_data]
crosscompute =
    assets/*.yaml

[options.entry_points]

[options.extras_require]
test =
    pytest-cov
    pytest-xdist

[flake8]
max-line-length = 79
select = B,C,E,F,W
ignore = W503

[coverage:run]
parallel = true
branch = true
source = crosscompute_validation
[coverage:paths]
source = crosscompute_validation

[tox:tox]
envlist = lint,py310,coverage-report
[testenv]
deps =
    .[test]
commands =
    coverage run -m pytest -vv tests -n auto
[testenv:coverage-report]
deps = coverage
skip_install = true
commands =
    coverage combine
    coverage report
[testenv:lint]
deps = flake8
skip_install = true
commands =
    flake8 crosscompute_validation

[gh-actions]
python =
    3.10: py310
